nivasa-macros/tests/trybuild/validation_is_int_invalid.stderr
error: expected an integer field for `#[is_int]`
 --> tests/trybuild/validation_is_int_invalid.rs:5:5
  |
5 |     #[is_int]
  |     ^
