nivasa-macros/tests/trybuild/validation_is_int_invalid.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct Metrics {
    #[is_int]
    retry_count: String,
}

fn main() {}
